--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,15 @@
 // Navigation code here
 header{
+    position: fixed;
+    top: 0;
+    left: 0;
     width:100%;
     background:@nav-bg;
     border-bottom:1px solid @nav-border;
     text-align:center;
+    &:hover{
+        opacity:.5;
+    }
     h1{
         .space(15px);
     }
@@ -17,7 +23,10 @@ header{
         }
     }
 }
-
+.spacer{
+    display:hidden;
+    height:125px;
+}
 
 
 .intro{
